1. changed portfolio gallery  2. changed main font for website

--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
         <section id="portfolio" class="portfolio section-page">
             <div class="container">
                 <h2 class="portfolio__title title">Portfolio Gallery</h2>
-                <div class="gallery__slider-box">
-                    <div class="gallery__slider fade">
-                        <div class="gallery__slider-number">1 / 9</div>
-                        <img class="gallery__img" src="images/gallery/flower.jpg" alt="Flower">
-                    </div>
-                    <a class="gallery__arrow-prev">❮</a>
-                    <a class="gallery__arrow-next">❯</a>
+                <div class="portfolio-gallery">
+                    <img class="portfolio-gallery__img" src="images/gallery/flowers.jpg" alt="Flowers">
+                    <img class="portfolio-gallery__img" src="images/gallery/aster.jpg" alt="Aster">
+                    <img class="portfolio-gallery__img" src="images/gallery/field-flower.jpg" alt="Field's flowers">
+                    <img class="portfolio-gallery__img" src="images/gallery/flower-bud.jpg" alt="Flower's bud">
+                    <img class="portfolio-gallery__img" src="images/gallery/winter-flower.jpg" alt="Winter flower">
+                    <img class="portfolio-gallery__img" src="images/gallery/snow-flower.jpg" alt="Flower in snow">
                 </div>
             </div>
         </section>
